Bug: Problème de prise en compte du z-index sous internet explorer pour le datepicker en modale.
git-svn-id: svn://svn.code.sf.net/p/mediboard/code/trunk@12269 a21d6be2-e512-0410-a060-91f5a2946631

--- a/style/mediboard/ui.css
+++ b/style/mediboard/ui.css
@@ -596,7 +596,7 @@ td.show {
 	padding:			5px;
   margin-top: -1px;
 	cursor: default;
-  z-index: 550;
+  z-index: 550 !important;
   -moz-box-shadow: 4px 4px 8px rgba(0,0,0,0.4);
   -webkit-box-shadow: 4px 4px 8px rgba(0,0,0,0.4);
   box-shadow: 4px 4px 8px rgba(0,0,0,0.4);
